# engine-plugin-unity3d

./: .gitignore  Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-Editor.pidb  Assembly-CSharp-firstpass.csproj  Assembly-CSharp-firstpass.pidb  Assembly-CSharp.csproj  Assembly-CSharp.pidb  Assembly-UnityScript-firstpass-vs.unityproj  Assembly-UnityScript-firstpass.pidb  README.md  unity-plugin-csharp.sln  unity-plugin.sln
Assets/: FunapiNetworkTester.cs  Tester.unity  pbuf_echo.cs
Assets/Editor/: BasicSyncInspectorEditor.cs  CharSyncInspectorEditor.cs  PrefabSyncInspectorEditor.cs
Assets/Funapi/: FacebookConnector.cs  FunapiAnnouncement.cs  FunapiDownloader.cs  FunapiNetwork.cs  OAuthHandler.cs  SocialNetwork.cs  TwitterConnector.cs
Assets/Funapi Assets/: BasicSyncInspector.cs  CharSyncInspector.cs  PrefabSyncInspector.cs
Assets/Funapi Internal/Code Template/Server/: Makefile.am  boot.sh  configure.ac
Assets/Funapi Internal/Code Template/Server/doxygen/: doxygen.conf.in  footer.html  header.html  style.css
Assets/Funapi Internal/Code Template/Server/m4/: ax_boost_filesystem.m4  ax_boost_thread.m4  ax_boost_unit_test_framework.m4  ax_coverage.m4  ax_debugging.m4  ax_funapi.m4  ax_profiling.m4  ax_protobuf.m4  ax_pthread.m4  ax_websocketpp.m4
Assets/Funapi Internal/Code Template/Server/src/: automake.mk  event_handlers.cc  event_handlers.h  xxx_server_installer.cc  xxx_server_types.h
Assets/Tester/: FacebookTester.cs  FunapiNetworkTester.cs  FunapiTester.unity  TwitterTester.cs
Assets/plugins/: FunapiDownLoader.cs  FunapiDownloader.cs  FunapiDownloader.cs.cs  FunapiNetwork.cs  MD5Async.cs  SimpleJSON.cs  fun_message.cs
ProjectSettings/: ProjectSettings.asset  TagManager.asset
Tools/: build-linux.sh  build-mac.sh  build-win.bat
Tools/csharp-files/: maintenance.cs
additional-plugins/: facebook-plugin.unitypackage  twitter-plugin.unitypackage
csharp-samples/: build.bat  makefile
csharp-samples/Linux/: libsodium.bundle  makefile
csharp-samples/VS2015/: plugin-tester.sln
csharp-samples/src/: client.cs  main.cs
csharp-samples/vs2015/: funapi-plugin-unity.csproj  funapi-plugin-unity.sln
dedi-server-example/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  dedi-server-example.sln  run.bat
dedi-server-example/Assets/: Main.unity
dedi-server-example/ProjectSettings/: EditorBuildSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
dedicated-server-plugin/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
funapi-plugin-unity/: Config.json
funapi-plugin-unity/Assets/: FunapiWebSocket.jslib  README.txt  WebSocket.jslib
funapi-plugin-unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
funapi-plugin-unity/Test/: build.sh  main.cs
funapi-plugin-unity/Tools/: build-linux.sh  build-mac-cs.sh  build-mac.sh  (+1 more)
plugin-test/: Makefile  makefile
vs2015/: funapi-plugin.sln
(+377 files in other folders)
